added auth0 to server
