# src/routes/index.ts
@@ -2,12 +2,17 @@ import { Router, Request, Response } from 'express';
 import swaggerUi from 'swagger-ui-express';
 import swaggerDocument from '../swagger.json';
 import { routes as foodRoutes } from './food';
+import { requiresAuth } from 'express-openid-connect';
 
 export const routes = Router();
 
 routes.get(`/`, (req: Request, res: Response, next) => {
   // #swagger.description = `Root endpoint`
-  res.json(`Hello Food Lover!`);
+  res.json(req.oidc.isAuthenticated() ? `Hello Food Lover!` : `Join us now!`);
+});
+
+routes.get('/profile', requiresAuth(), (req, res) => {
+  res.send(req.oidc.user);
 });
 
 routes.use(`/food`, foodRoutes);
